--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21.0.6</javafx.version>
         <mysql.connector.version>9.5.0</mysql.connector.version>
+        <h2.version>2.4.240</h2.version>
         <junit.version>6.0.2</junit.version>
     </properties>
 
@@ -27,6 +28,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>${mysql.connector.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
